# sigma16-compiler

./: Cargo.toml  LICENSE  README.md
compiler/: Cargo.toml
compiler-cli/: Cargo.toml
compiler-cli/src/: main.rs  tui.rs
compiler-wasm/: Cargo.toml  demo.html
compiler-wasm/src/: lib.rs
compiler/src/: ast.rs  grammar.lalrpop  ir.rs  ir_generator.rs  lexer.rs  lib.rs
compiler/src/ast/: ast_ir.rs  mod.rs
compiler/src/backend/: mod.rs  sigma16.rs
compiler/src/backend/sigma16/: codegen.rs  regalloc.rs
compiler/src/ir/: ir.rs  ir_generator.rs  mod.rs
s16-cli/: Cargo.toml
s16-cli/src/: main.rs  tui.rs
s16-compiler/: Cargo.toml
s16-compiler/src/: grammar.lalrpop  lib.rs
s16-compiler/src/ast/: ast_ir.rs
s16-compiler/src/backend/: abi.rs  instruction.rs  liveness.rs  mod.rs  optimize.rs  sigma16.rs
s16-compiler/src/backend/codegen/: lowering.rs  mod.rs  program.rs
s16-compiler/src/backend/regalloc/: advanced.rs  greedy.rs  mod.rs
s16-compiler/src/backend/sigma16/: abi.rs  codegen.rs  liveness.rs  opt.rs  regalloc.rs
s16-compiler/src/backend/sigma16/codegen/: emitter.rs  instr_lowering.rs  item.rs  mod.rs
s16-compiler/src/frontend/: lexer.rs  mod.rs
s16-compiler/src/ir/: ast.rs  error_utils.rs  ir.rs  ir_generator.rs  mod.rs  source_map.rs  symbol_table.rs
s16-compiler/src/ir/ir_generator/: context.rs  expr.rs  mod.rs  stmt.rs
s16-compiler/src/ir/opt/: constant_folding.rs  mod.rs
s16-compiler/tests/: codegen.rs  errors.rs  features.rs
s16-wasm/: .gitignore  Cargo.toml  README.md
s16-wasm/src/: compiler.rs  convert.rs  lib.rs  types.rs
samples/: bitwise.sig  bubble_sort.sig  gcd.sig  is_prime.sig  paf.sig  recursion.sig  strlen.sig  sum_digits.sig  test.lang  test.sig
