[package]
name = "s16-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
s16-compiler = { path = "../s16-compiler" }
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1"
logos = "0.15.1"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tui-textarea = "0.6"
